--- a/static/style.css
+++ b/static/style.css
@@ -36,8 +36,8 @@ body {
 }
 .content {
     width: 100%;
-    height: 100vh   ;
-    background-color: yellow;
+    height: 100vh;
+    background-color: white;
     float: left;
     padding: 10px 10px 10px 100px;
 }
