--- a/templates/news.html
+++ b/templates/news.html
@@ -3,6 +3,7 @@
         <div class="content">
             <h1>{{ new.title }}</h1>
             <h3>{{ new.annotation }}</h3>
+            <h5>{{ key }}</h5>
             <p>{{ new.text }}</p>
             <img height="300px" width="300px" src="..\{{ new.image }}" alt="None">
         </div>
